--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@
   text-align: center;
 }
 
-.logo img {
-  height: 100px;
-  padding: 20px 30px;
+.imgWrapper img {
+  height: 50px;
+  padding: 20px 10px 20px 30px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
